// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders 1`] = `
<div
  className="dgyGUu"
/>
`;

exports[`BackgroundImage renders with height 1`] = `
<div
  className="dHEIDR"
  height="320px"
/>
`;

exports[`BackgroundImage renders with image 1`] = `
<div
  className="eHYuZ"
/>
`;
